--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ footer{
 
         </div>
         <div class="hero-image">
-            <img src="profile.jpg"  alt="Profile" class="profile-img">
+            <img src="mypic.jpg"  alt="Profile" class="profile-img">
         </div>
     </section>
 
@@ -279,4 +279,5 @@ footer{
         </div>
     </footer>
 </body>
+
 </html>
