--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@ footer{
 
         </div>
         <div class="hero-image">
-            <img src="mypic.jpg"  alt="Profile" class="profile-img">
+            <img src="profile.jpg"  alt="Profile" class="profile-img">
         </div>
     </section>
 
@@ -281,3 +281,4 @@ footer{
 </body>
 
 </html>
+
