--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@ body{
 .hero{
     min-height:100vh;
     display: flex;
+    justify-content:center;
     align-items: center;
     padding: 12% 5%;
     background: radial-gradient(circle at 75% 30% ,var(--accent-glow) 0% transparent 30%);
@@ -281,6 +282,7 @@ footer{
 </body>
 
 </html>
+
 
 
 
